debut restructuration memento. Rajout de Web et Appli

--- a/css.html
+++ b/css.html
@@ -12,22 +12,16 @@
 <script defer src="prism.js"></script>
 
 <body>
-
+<h1> CSS </h1>
 <div id="bandeau">
-  <h1> Memento </h1>
-  <h1> Css </h1>
+
+
 
   <nav>
     <div class="element"> <a href="html.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="java.html">JAVA</a> </div>
-    <div class="element"> <a href="kotlin.html">KOTLIN</a> </div>
-    <div class="element"> <a href="android.html">ANDROID</a> </div>
     <div class="element"> <a href="php.html">PHP</a> </div>
-    <div class="element"> <a href="python.html">PYTHON</a> </div>
-    <div class="element"> <a href="c.html">C</a> </div>
-    <div class="element"> <a href="git.html">LINUX</a> </div>
   </nav>
 </div>
 
@@ -334,7 +328,8 @@ ol{
   right: 35%;
   z-index: 2;
 }</code></pre><footer class="legendeCode">CSS</footer>
-    <p>Le positionnement <strong>fixed</strong> permet de placer un élément sur une page et de s'assurer qu'il reste toujours visible même si on se déplace sur la page.</p>
+    <p>Le positionnement <strong>fixed</strong> permet de placer un élément sur une page et de s'assurer qu'il reste toujours visible même si on se déplace sur la page.
+    C'est utile notamment si l'on souhaite qu'un bandeau reste en haut d'une page lorsqu'on se déplace avec la souris.</p>
     <p>Le positionnement <strong>relative</strong> permet de décaler l'élément par rapport à la position d'origine. A éviter par souci de simplicité.</p>
 
   <!-- Modifier l'aspect d'un lien lorsque la souris le survole -->
