--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
 
 <body>
 
-<!-- Image de présentation-->
-<header>
-    <div class="heroImage">
-        <div class="heroTexte">
-            <h2> Memento </h2>
-        </div>
-    </div>
-</header>
+
+
+<h1>Memento de programmation</h1>
 
 <!-- Bandeau et menu -->
+
 <div id="bandeau">
-    <div id="titre"> <h1>  </h1> </div>
     <nav>
         <div class="element"> <a href="html.html">HTML</a> </div>
         <div class="element"> <a href="css.html">CSS</a> </div>
@@ -31,9 +26,14 @@
     </nav>
 </div>
 
+
 <section id="principal">
 
+<div class=""><p>Développement Web</p></div>
 
+    <div class="">Développement d'application</div>
+
+    <div class="">Gestion</div>
 
 
 
