working on refactoring

--- a/web/css.html
+++ b/web/css.html
@@ -3,13 +3,13 @@
 
 <head>
   <title> Memento </title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="prism.css">
+  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="../style/prism.css">
   <meta charset="utf-8">
 </head>
 
 <!-- JavaScript de gestion des couleurs de code -->
-<script defer src="prism.js"></script>
+<script defer src="../style/prism.js"></script>
 
 <body>
 <h1> CSS </h1>
@@ -26,7 +26,7 @@
 </div>
 
 <aside>
-  <nav id="table_matiere">
+  <nav id="table_matieres">
     <a href="#structure">Structure</a>
     <a href="#forme">Mise en forme</a>
     <a href="#propriete">Propriétés</a>
@@ -35,9 +35,17 @@
   </nav>
 </aside>
 
+<aside>
+  <nav id="chapitres">
+    <a href="">Accueil</a>
+    <a href="web.html">Web</a>
+    <a href="../appli/appli.html">Appli</a>
+  </nav>
+</aside>
+
 <section id="principal">
 
-
+  <img src="../images/symbole.png" alt="symbole S. Robin" width=30%>
 
 
   <!-- ===== STRUCTURE D'UNE PAGE CSS ===== -->
@@ -84,7 +92,7 @@
 
   </div>
 
-  <fieldset><legend><img src="images/bonSavoir.png" width="80" height="80"> </legend>
+  <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
     <p> <em>Attention</em>, dans ce cas il est important de ne pas oublier le <strong>.</strong> devant le nom de la classe de la balise.</p>
   </fieldset>
 
@@ -156,7 +164,7 @@ text-align: right;
 text-align: center;
 text-align: justify;</code></pre><footer class="legendeCode">CSS</footer>
 
-    <fieldset><legend><img src="images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
       <p> L'alignement avec l'attribut <strong>text-align</strong> ne fonctionne qu'avec les blocs et non pas les balises <em>inline</em> telles que <strong>&ltspan&gt</strong>, <strong>&lta&gt</strong>, <strong>&ltem&gt</strong>, <strong>&ltstrong&gt</strong>,...</p>
     </fieldset>
 
@@ -342,7 +350,7 @@ ol{
   font-weight: bold;
 }</code></pre><footer class="legendeCode">CSS</footer>
 
-    <fieldset><legend><img src="images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
     <p><em>Attention</em>, dans ce cas il ne faut surtout pas mettre d'espace entre <strong>a</strong> et <strong>hover</strong> sous peine de dysfonctionnement car <strong>hover</strong> n'est pas la valeur d'un attribut.</p>
   </fieldset>
 
@@ -359,7 +367,7 @@ th, td{
     border: 1px solid black;
 }</code></pre><footer class="legendeCode">CSS</footer>
 
-    <fieldset><legend><img src="images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
       <p> Il n'est pas nécessaire de créer des bordures pour la balise <strong>&lttr&gt</strong> car elles ont déjà été faites avec les bordures <strong>&ltth&gt</strong> et <strong>&lttd&gt</strong>.</p>
     </fieldset>
 
