--- a/web/php.html
+++ b/web/php.html
@@ -3,39 +3,38 @@
 
 <head>
   <title> Memento </title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="prism.css">
+  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="../style/prism.css">
   
   <meta charset="utf-8">
 </head>
 
 <!-- script de gestion des couleurs de code -->
-<script defer src="prism.js"></script>
+<script defer src="../style/prism.js"></script>
 
+<h1> PHP </h1>
 <div id="bandeau">
-  <h1> Memento </h1>
-  <h1> PHP </h1>
 
   <nav>
     <div class="element"> <a href="html.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="java.html">JAVA</a> </div>
-    <div class="element"> <a href="kotlin.html">KOTLIN</a> </div>
-    <div class="element"> <a href="android.html">ANDROID</a> </div>
     <div class="element"> <a href="php.html">PHP</a> </div>
-    <div class="element"> <a href="python.html">PYTHON</a> </div>
-    <div class="element"> <a href="c.html">C</a> </div>
-    <div class="element"> <a href="git.html">LINUX</a> </div>
   </nav>
 </div>
 
 <body>
 
-
+<aside>
+  <nav id="chapitres">
+    <a href="">Accueil</a>
+    <a href="web.html">Web</a>
+    <a href="../appli/appli.html">Appli</a>
+  </nav>
+</aside>
 
 <aside>
-  <nav id="table_matiere">
+  <nav id="table_matieres">
     <a href="#py_generalites">Structure du code</a>
       <a href="#py_communiquer">Communiquer avec l'utilisateur</a>
       <a href="#py_variable">Les variables</a>
@@ -63,6 +62,8 @@
 </aside>
 
 <section id="principal">
+
+  <img src="../images/symbole.png" alt="symbole S. Robin" width=30%>
 
 <!-- CONFIGURATION DU SERVEUR -->
 
